# yorku-hp-plotter-art-1970

./: 404.html  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md  reference.md
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
src/lissajou/: __init__.py  plot.py
tests/lissajou/plot/: test_angle_list.py
tutorials/: index.html
